part1/112/manifests/pingpongservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: ex112 # This is the app as declared in the deployment.
  ports:
    - port: 2345 # This is the port that is made available outside to Ingress.
      protocol: TCP
      targetPort: 3000 # This is the target port
