part1/112/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex112-ing
spec:
  rules:
  - http:
      paths:
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
      - path: /ping
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2345
